begin re-adding auto tests